# opencode-agent-hub

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  KEY.gpg  LICENSE  README.md  devfile.yaml  index.html  pyproject.toml  xnoto.list  xnoto.repo
.github/: SETUP.md
.github/workflows/: ci.yml  publish.yml  release-packages.yml  release-please.yml  update-homebrew.yml
apt/: InRelease  Packages  Release  Release.gpg  opencode-agent-hub_0.5.4-1_all.deb  opencode-agent-hub_0.5.5-1_all.deb  opencode-agent-hub_1.0.0-1_all.deb  opencode-agent-hub_1.0.1-1_all.deb  opencode-agent-hub_1.0.2-1_all.deb  opencode-agent-hub_1.0.3-1_all.deb  opencode-agent-hub_1.1.0-1_all.deb  opencode-agent-hub_1.1.1-1_all.deb
contrib/coordinator/: AGENTS.md
contrib/launchd/: com.xnoto.agent-hub-daemon.plist
contrib/systemd/: agent-hub-daemon.service
rpm/: opencode-agent-hub-0.5.4-1.fc42.noarch.rpm  opencode-agent-hub-0.5.5-1.fc42.noarch.rpm  opencode-agent-hub-1.0.0-1.fc42.noarch.rpm  opencode-agent-hub-1.0.1-1.fc42.noarch.rpm  opencode-agent-hub-1.0.2-1.fc42.noarch.rpm  opencode-agent-hub-1.0.3-1.fc42.noarch.rpm  opencode-agent-hub-1.1.0-1.fc42.noarch.rpm  opencode-agent-hub-1.1.1-1.fc43.noarch.rpm
rpm/repodata/: 005d9168677fd1f5ff920a244320e292c10ed658362d380d90edae628df5c27e-filelists.sqlite.bz2  06b6a5f455f55d379c084ef0b0ca751b0039707dea01ef3ab679157e3c7a3e55-primary.sqlite.bz2  0a0b33fd02fdad1e288a243654d9fb0628afb99cce1b225635165ced22fe5acd-filelists.sqlite.bz2  0bc25b757bdd9b3129c2f8936d2ef7686ab20f6db2aa51a0740d5d61cce43b63-filelists.sqlite.bz2  135e6c3dedd38476b48820fa13e64f7359c2f786bea1c044aa2f4bda26309fab-other.sqlite.bz2  18a6aff27b07fddd6b434d4b56c81ccf527ec1c10be91e1d0c93b017d0d0ed8c-other.sqlite.bz2  2004c0877e879cddfae2caa2117d76469de21796ca829cd38b1151a98a44b417-filelists.sqlite.bz2  2fb324fe1c6b12f0c9d357ad925fc130867ea8c1ff758cf7f8dbce2e7cb80c28-other.sqlite.bz2  30c1878db1867a17a0b798759948810261d03eaba992fb6584a2d04c38ce4747-other.sqlite.bz2  499e17c1c2c64a0ed839a1f29e1868e27dcb98f8ed8ccc23376a685972836111-primary.sqlite.bz2  5694c8f7646fb52aa96b583196650861b3979f01fa138b736ae5351dbc5c3588-filelists.sqlite.bz2  5b8e7779eb23e4d72a18282d83f723e93097690efb3dcfeaa22527299446a8f6-filelists.sqlite.bz2  5c7d8dc5dcab5b751b89e33861ec177a138fa26b0984d8aa9a34f4b4ab5c2d51-other.sqlite.bz2  896f7cfd81e4c633b30696b949e6072ec7bcb3a81b712ab23c90f5be53de7273-primary.sqlite.bz2  8ea130f3d3417d9f076848517d1c3a50b893c87119444d0add0ce4b3a7fcb763-primary.sqlite.bz2  (+11 more)
tests/: __init__.py  test_config.py  test_coordinator.py  test_coordinator_cost.py  test_orientation_retry.py  test_placeholder.py  test_rate_limiting.py  test_session_agents.py  test_watch.py
(+11 files in other folders)
