[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencode-agent-hub"
version = "0.5.3"
description = "Multi-agent coordination daemon and tools for OpenCode"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "xnoto" },
]
keywords = [
    "opencode",
    "ai",
    "agents",
    "coordination",
    "daemon",
    "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "requests>=2.28.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.scripts]
agent-hub-daemon = "opencode_agent_hub.daemon:main"
agent-hub-watch = "opencode_agent_hub.watch:main"

[project.urls]
Homepage = "https://github.com/xnoto/opencode-agent-hub"
Repository = "https://github.com/xnoto/opencode-agent-hub"
Issues = "https://github.com/xnoto/opencode-agent-hub/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opencode_agent_hub"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["opencode_agent_hub"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["src/opencode_agent_hub"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
